--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ h1 {
   font-size: 0;
   text-indent: -9999px;
 }
+h2.process {
+  margin: 0 auto;
+  color: red;
+}
 header > .container {
   display: flex;
 
